--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,23 +11,29 @@ android {
         versionCode 2
         versionName "1.1"
     }
+    signingConfigs {
+        release {
+            storeFile file("neverwasplay.keystore")
+            storePassword "neverwasplay"
+            keyAlias "neverwasplay"
+            keyPassword "neverwasplay"
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+
+            signingConfig signingConfigs.release
         }
     }
-}
-
-repositories {
-    mavenCentral()
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     // You must install or update the Support Repository through the SDK manager to use this dependency.
-    compile 'com.android.support:support-v13:19.+'
+    compile 'com.android.support:support-v13:22.+'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile files('libs/libGoogleAnalyticsServices.jar')
-    compile 'com.facebook.android:facebook-android-sdk:4.+'
 
 }
